# novax

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  novax_gpu_benchmark.ipynb  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/activations/: index.html
api/autograd/: index.html
api/linalg/: index.html
api/math/: index.html
api/reductions/: index.html
api/tensor/: index.html
benchmarks/: bench.py  bench_gpu.py  novax_gpu_benchmark.ipynb  novax_gpu_benchmark.py
changelog/: index.html
concepts/: index.html
docs/: autoresearch-findings.md  changelog.md  concepts.md  getting-started.md  index.md
docs/api/: activations.md  autograd.md  linalg.md  math.md  reductions.md  tensor.md
getting-started/: index.html
novax/: __init__.py  autograd.py  core.py  cuda_graph.py  dispatch.py
novax/ops/: __init__.py  launcher.py
novax/ops/cpu/: __init__.py  abs.py  add.py  div.py  exp.py  log.py  matmul.py  max_op.py  mean.py  min_op.py  mul.py  neg.py  pow.py  relu.py  sigmoid.py  softmax.py  sqrt.py  sub.py  sum.py  tanh_op.py
novax/ops/gpu/: __init__.py  abs.py  add.py  div.py  exp.py  log.py  matmul.py  max_op.py  mean.py  min_op.py  mul.py  neg.py  pow.py  relu.py  sigmoid.py  softmax.py  sqrt.py  (+4 more)
novax/utils/: mempool.py
papers/: 2026-05-30-frontier-gpu-optimization.md  README.md
plans/: gpu_optimization_plan.md
search/: search_index.json
tests/: test_autograd.py  test_broadcast_and_overhead.py  test_capture_replay.py  test_fusion_t2.py  test_gpu_optimizations.py  test_novax.py  test_phase1_ops.py  test_t3_t4_opts.py
