[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "novax"
version = "0.1.16"
description = "GPU-accelerated math library for Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Shohaib Shah", email = "ss3295@cornell.edu" }
]

dependencies = [
  "numpy>=1.25"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Intended Audience :: Developers"
]

[project.optional-dependencies]
gpu = [
  "pycuda>=2024.1",
  "cuda-python>=12.0",
]

[project.urls]
Homepage = "https://github.com/SS-012/novax"
Repository = "https://github.com/SS-012/novax"
Issues = "https://github.com/SS-012/novax/issues"
